<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_scenery"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.android.minmaxagent.GameActivity">

    <!-- TODO Font: Add Calligraphy wherever required -->
    <!-- TODO Tablet Layout - forcing Portrait mode is shabby -->

    <LinearLayout
        android:id="@+id/scoreLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="28"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/scoreBoardP1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/LinearLayoutScoreBoard"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playerName"
                style="@style/TextPlayer"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_text" />

            <TextView
                android:id="@+id/scoreP1"
                style="@style/TextPlayerScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dummy_number"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/scoreBoardP2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/LinearLayoutScoreBoard"
            android:orientation="vertical">

            <TextView
                style="@style/TextPlayer"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/game_ai" />

            <TextView
                android:id="@+id/scoreP2"
                style="@style/TextPlayerScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dummy_number"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="13">

        <GridLayout
            android:id="@+id/baseGrid"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@drawable/grid_frame_overlay_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </GridLayout>
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="28"
        android:background="@drawable/signpost"
        android:orientation="vertical">

        <TextView
            android:id="@+id/turnPlayer"
            style="@style/TextWhiteBlackShadow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="8sp"
            android:text="@string/game_turnplayer"
            android:textSize="43sp" />
    </LinearLayout>

</LinearLayout>
