<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_scenery"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.android.minmaxagent.SettingsActivity">


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        app:srcCompat="@drawable/text_signup" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_weight="3.5"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/signpost_piece_top" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/signpost_piece_mid"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/login_username"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextUserName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@drawable/signpost_hollow"
                android:ems="10"
                android:inputType="text"
                android:text="@string/dummy_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/signpost_piece_mid"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/login_password"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@drawable/signpost_hollow"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@string/dummy_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/signpost_piece_mid"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/t"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/signup_password_reenter"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextPasswordMatch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@drawable/signpost_hollow"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@string/dummy_text" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/signpost_piece_bottom" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <Button
            android:id="@+id/buttonSignUp"
            style="@style/ButtonWhiteTextMed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/button_signup" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25" />

</LinearLayout>